--- a/index.html
+++ b/index.html
@@ -10,22 +10,42 @@
 </head>
 
 <body>
-    <div id="canvas"></div>
+    <canvas id='canvas' width="100" height="100"></canvas>
     <script>
-        canvas.onclick = (e) => {
-            console.log(e.clientX)
-            console.log(e.clientY)
-            let div = document.createElement('div')
-            div.style.position = 'absolute'
-            div.style.left = e.clientX + 'px'
-            div.style.top = e.clientY + 'px'
-            div.style.width = '6px'
-            div.style.height = '6px'
-            div.style.marginLeft = '-3px'
-            div.style.marginTop = '-3px'
-            div.style.borderRadius = '50%'
-            div.style.backgroundColor = 'black'
-            canvas.appendChild(div)
+        let canvas = document.getElementById('canvas')
+        // 通过id找到这个canvas
+        canvas.width = document.documentElement.clientWidth
+        canvas.height = document.documentElement.clientHeight
+        //把canvas的宽高变成屏幕的宽高
+
+        let ctx = canvas.getContext('2d');
+        // 获取这个东西，看不懂
+        let painting = false
+        // 声明一个变量（正在画） 初始值是false
+        ctx.fillStyle = 'black';
+        //填充样式是这个颜色
+        ctx.strokeStyle = 'none'
+
+        canvas.onmousedown = () => {
+            painting = true
+        }
+        //当鼠标按下的时候，painting的值是true
+
+        canvas.onmousemove = (e) => {
+            if (painting === true) {
+                //ctx.fillRect(e.clientX - 5, e.clientY - 5, 10, 10);
+                //填充矩形，起始横坐标，纵坐标，宽度，高度
+                ctx.beginPath();
+                ctx.arc(e.clientX, e.clientY, 10, 0, 2 * Math.PI);
+                ctx.stroke();
+                ctx.fill();
+                //填充圆形
+            } else {
+                console.log('什么都不做')
+            }
+        }
+        canvas.onmouseup = () => {
+            painting = false
         }
     </script>
 </body>
